--- a/DoDHackathon2013/res/values/colors.xml
+++ b/DoDHackathon2013/res/values/colors.xml
@@ -16,4 +16,10 @@
     <color name="bluestart_selected">#2B69CC</color>
     <color name="blueend_selected">#255CB3</color>
     
+    <!-- Used for carlorie, carb, fat, and protein coloring -->
+    <color name="calories_color">#FFCC66</color>
+    <color name="carbs_color">#99FF66</color>
+    <color name="fat_color">#CCCCFF</color>
+    <color name="protein_color">#EEBBEE</color>
+    
 </resources>
