--- a/DoDHackathon2013/res/layout/fragment_main.xml
+++ b/DoDHackathon2013/res/layout/fragment_main.xml
@@ -57,6 +57,7 @@
                 android:layout_marginTop="2dp" />
 
             <TextView
+                android:id="@+id/text_calories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -90,6 +91,7 @@
                 android:layout_marginTop="2dp" />
 
             <TextView
+                android:id="@+id/text_carbs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -123,6 +125,7 @@
                 android:layout_marginTop="2dp" />
 
             <TextView
+                android:id="@+id/text_fat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -155,6 +158,7 @@
                 android:layout_marginTop="2dp" />
 
             <TextView
+                android:id="@+id/text_protein"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
