--- a/DoDHackathon2013/res/layout/dialog_profile.xml
+++ b/DoDHackathon2013/res/layout/dialog_profile.xml
@@ -12,13 +12,45 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:focusableInTouchMode="true"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="5dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/name"
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="5dp"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/dialog_profile_user_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:ems="10"
+                android:imeOptions="actionDone"
+                android:inputType="textPersonName" >
+
+                <requestFocus />
+            </EditText>
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/gender"
-            android:textSize="24sp" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:textSize="18sp" />
 
         <LinearLayout
             style="?android:attr/buttonBarStyle"
@@ -51,7 +83,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="20dp"
             android:text="@string/height"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".8"
                 android:text="@string/ft"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -100,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".8"
                 android:text="@string/in"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -116,13 +148,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
                 android:text="@string/weight"
-                android:textSize="24sp" />
+                android:textSize="18sp" />
 
             <CheckBox
                 android:id="@+id/dialog_profile_target_weight_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:text="@string/target_weight" />
         </LinearLayout>
 
@@ -140,7 +172,6 @@
                 android:layout_weight="1"
                 android:digits="1234567890."
                 android:ems="10"
-                android:gravity="center"
                 android:imeOptions="actionDone"
                 android:inputType="phone" />
 
@@ -149,7 +180,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:text="@string/lbs"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/dialog_profile_my_target"
@@ -158,7 +189,6 @@
                 android:layout_weight="1"
                 android:digits="1234567890."
                 android:ems="10"
-                android:gravity="center"
                 android:imeOptions="actionDone"
                 android:inputType="phone" />
 
@@ -167,7 +197,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lbs"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -201,7 +231,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="20dp"
             android:text="@string/age"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -218,7 +248,6 @@
                 android:layout_weight=".75"
                 android:digits="1234567890"
                 android:ems="10"
-                android:gravity="center"
                 android:imeOptions="actionDone"
                 android:inputType="phone" />
 
@@ -227,7 +256,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".25"
                 android:text="@string/yrs"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <View
