layout is AWESOME

--- a/DoDHackathon2013/res/layout/list_element_food.xml
+++ b/DoDHackathon2013/res/layout/list_element_food.xml
@@ -3,16 +3,16 @@
     android:id="@+id/list_element_food_main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="20dp" >
 
     <TextView
         android:id="@+id/list_element_food_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="7dp"
         android:text="@string/placeholder_food_title"
-        android:textSize="18sp"
-        android:background="#DDDDDD"
-        android:padding="7dp" />
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,38 +22,41 @@
             android:id="@+id/list_element_food_calories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder_calories"
             android:layout_weight="1"
-            android:textSize="14sp"
-            android:background="@color/calories_color" />
+            android:background="@color/calories_color"
+            android:gravity="center"
+            android:text="@string/placeholder_calories"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/list_element_food_carbs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder_carb"
             android:layout_weight="1"
-            android:textSize="14sp"
-            android:background="@color/carbs_color" />
+            android:background="@color/carbs_color"
+            android:gravity="center"
+            android:text="@string/placeholder_carb"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/list_element_food_fat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder_fat"
             android:layout_weight="1"
-            android:textSize="14sp"
-            android:background="@color/fat_color" />
+            android:background="@color/fat_color"
+            android:gravity="center"
+            android:text="@string/placeholder_fat"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/list_element_food_protein"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder_protein"
             android:layout_weight="1"
-            android:textSize="14sp"
-            android:background="@color/protein_color" />
-
+            android:background="@color/protein_color"
+            android:gravity="center"
+            android:text="@string/placeholder_protein"
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
