--- a/DoDHackathon2013/res/layout/list_element_exercise.xml
+++ b/DoDHackathon2013/res/layout/list_element_exercise.xml
@@ -7,12 +7,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:baselineAligned="false" >
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.8"
+            android:layout_weight=".75"
             android:orientation="vertical"
             android:padding="3dp" >
 
@@ -21,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="1dp"
-                android:text="This is sample text"
+                android:text="@string/placeholder_exercise_name"
                 android:textSize="16sp" />
 
             <TextView
@@ -29,16 +30,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="1dp"
-                android:text="More text"
+                android:text="@string/placeholder_calories_exer"
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/list_element_exercise_checked"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".2" />
-        
+            android:orientation="vertical"
+            android:layout_weight=".25"
+            android:padding="3dp" >
+
+        	<Spinner
+        	    android:id="@+id/list_element_exercise_spin"
+        	    android:layout_width="wrap_content"
+        	    android:layout_height="wrap_content" >
+        	    
+        	</Spinner>   
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
