--- a/DoDHackathon2013/res/layout/picker_exercise.xml
+++ b/DoDHackathon2013/res/layout/picker_exercise.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_margin="5dp" >
 
-    <ListView
-        android:id="@+id/picker_food_listview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp" >
-    </ListView>
+        android:layout_weight="1"
+        android:orientation="vertical" >
+        
+     	<TextView
+     	    android:layout_width="match_parent"
+     	    android:layout_height="wrap_content"
+     	    android:textSize="22sp"
+     	    android:text="@string/combat" />
 
+        <ListView
+            android:id="@+id/picker_exercise_combat_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp" >
+        </ListView>
+    </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <TextView
+     	    android:layout_width="match_parent"
+     	    android:layout_height="wrap_content"
+     	    android:textSize="22sp"
+     	    android:text="@string/non_combat" />
+        
+        <ListView
+            android:id="@+id/picker_exercise_noncombat_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp" >
+        </ListView>
+    </LinearLayout>
+
+</LinearLayout>
