--- a/DoDHackathon2013/res/layout/picker_exercise.xml
+++ b/DoDHackathon2013/res/layout/picker_exercise.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="5dp" >
+    android:layout_margin="5dp"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical" >
-        
-     	<TextView
-     	    android:layout_width="match_parent"
-     	    android:layout_height="wrap_content"
-     	    android:textSize="22sp"
-     	    android:text="@string/combat" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/combat"
+            android:textSize="22sp" />
 
         <ListView
             android:id="@+id/picker_exercise_combat_list"
@@ -32,11 +32,11 @@
         android:orientation="vertical" >
 
         <TextView
-     	    android:layout_width="match_parent"
-     	    android:layout_height="wrap_content"
-     	    android:textSize="22sp"
-     	    android:text="@string/non_combat" />
-        
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/non_combat"
+            android:textSize="22sp" />
+
         <ListView
             android:id="@+id/picker_exercise_noncombat_list"
             android:layout_width="match_parent"
@@ -44,5 +44,11 @@
             android:layout_margin="5dp" >
         </ListView>
     </LinearLayout>
+
+    <Button
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@android:string/ok" />
 
 </LinearLayout>
