made the thing with exercises return and work

--- a/DoDHackathon2013/res/layout/picker_exercise.xml
+++ b/DoDHackathon2013/res/layout/picker_exercise.xml
@@ -46,6 +46,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/picker_exercise_ok"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
