--- a/DoDHackathon2013/res/layout/fragment_main.xml
+++ b/DoDHackathon2013/res/layout/fragment_main.xml
@@ -41,19 +41,20 @@
             android:text="@string/button_viewday" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/bar_userinfo"
+    <LinearLayout
+        android:id="@+id/bar_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/green_button_selector"
-        android:clickable="true"
-        android:padding="10dp" >
+        android:clickable="true" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:orientation="vertical" >
+            android:id="@+id/bar_userinfo"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/green_button_selector"
+            android:orientation="vertical"
+            android:padding="10dp" >
 
             <TextView
                 android:id="@+id/text_username"
@@ -69,23 +70,39 @@
                 android:text="@string/placeholder_loadtype" />
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/btn_gear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="right|center_vertical"
-            android:background="@null"
-            android:src="@drawable/btn_gear" />
+        <LinearLayout
+            android:id="@+id/bar_gear"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/green_button_selector"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:padding="10dp" >
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/label_gearbtn"
+                android:textSize="18sp" />
+            
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginLeft="10dp"
+                android:background="@null"
+                android:src="@drawable/btn_gear" />
+
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/progressesHolder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/bar_userinfo"
+        android:layout_below="@id/bar_buttons"
         android:layout_marginTop="10dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
